no jumping around and paper stays correct size the solution using intersection observer for width is hacky

--- a/src/components/team/membersPage/Members.module.css
+++ b/src/components/team/membersPage/Members.module.css
@@ -50,10 +50,11 @@
 }
 
 .list {
-  margin: auto;
+  /* margin: auto; */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: flex-start;
   flex-grow: 1;
 }
 
